<resources>
    <string name="app_name">Gym Timer</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="name">Nome</string>
    <string name="register">Registrar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="cep">Cep</string>
    <string name="rua">Rua</string>
    <string name="num">Número</string>
    <string name="complemento">Complemento</string>
    <string name="cidade">Cidade</string>
    <string name="phone">Telefone</string>
    <string name="password">Senha</string>
    <string name="sua_academia">SUA ACADEMIA</string>
    <string name="encontre_sua_academia">Encontre sua academia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="academia">Academia</string>
    <string name="perfil">Perfil</string>
    <string name="more_information">MAIS INFORMAÇÕES</string>
    <string name="come_e_registrando_uma_academia">Começe registrando uma academia</string>
    <string name="ok">OK</string>
    <string name="tente_mais_tarde">Não foi possivel agora, tente novamente mais tarde</string>
    <string name="uf">UF</string>
    <string name="registre_se_aqui">Registre - se aqui</string>
    <string name="cancelar">Cancelar</string>
    <string name="escolha_imagem">Escolha uma imagem</string>
    <string name="ainda_n_o_possui_alunos">Ainda não possui alunos</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="tem_certeza">Tem certeza?</string>
    <string name="deletar">Deletar</string>
    <string name="deseja_deletar">Deseja deletar?</string>
    <string name="hor_rios">Horários</string>
    <string name="clique_aqui">Clique Aqui</string>
    <string name="salvar">Salvar</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
</resources>