<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditGymActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewGymEG"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOpenGaleryEG"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/yantramanav"
            android:text="@string/clique_aqui"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="22dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewGymEG">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextNameGymEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_default"
                android:inputType="text"
                android:hint="@string/name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewUFEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_default"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:text="@string/uf"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextCepEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_default"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:hint="@string/cep"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextRuaEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_default"
                android:inputType="textPostalAddress"
                android:layout_marginTop="10dp"
                android:hint="@string/rua"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextNumEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_default"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:hint="@string/num"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextComplementoEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_default"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:hint="@string/complemento"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextCidadeEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_default"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:hint="@string/cidade"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:id="@+id/ButtonEditGym"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/yantramanav"
                android:textSize="19sp"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_login"
                android:layout_height="wrap_content"
                android:text="@string/editar"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.core.widget.NestedScrollView>