<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageButtonBackRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:background="@drawable/ic_back"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewUserPhotoRegister"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonOpenGalery"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_image_redonda"
        android:fontFamily="@font/yantramanav"
        android:text="@string/clique_aqui"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUserPhotoRegister">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextNameRegister"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edit_login"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextEmailRegister"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edit_login"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPhoneRegister"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edit_login"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPasswordRegister"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edit_login"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_login_button"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>