<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewGymActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNewGym"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imageButtonClose"
                android:layout_width="30dp"
                android:layout_marginEnd="16dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_close" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/yantramanav"
                android:text="@string/escolha_imagem" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewGymNG"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarNewGym"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOpenGaleryNG"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="Clique Aqui"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:fontFamily="@font/yantramanav"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarNewGym" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="22dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewGymNG">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextNameGymNG"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_login"
                android:inputType="text"
                android:paddingStart="22dp"
                android:hint="@string/name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewUf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_login"
                android:inputType="text"
                android:paddingStart="22dp"
                android:layout_marginTop="10dp"
                android:text="@string/uf"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextCep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_login"
                android:inputType="number"
                android:paddingStart="22dp"
                android:layout_marginTop="10dp"
                android:hint="@string/cep"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextRua"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_login"
                android:inputType="textPostalAddress"
                android:paddingStart="22dp"
                android:layout_marginTop="10dp"
                android:hint="@string/rua"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_login"
                android:inputType="number"
                android:paddingStart="22dp"
                android:layout_marginTop="10dp"
                android:hint="@string/num"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextComplemento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_login"
                android:inputType="text"
                android:paddingStart="22dp"
                android:layout_marginTop="10dp"
                android:hint="@string/complemento"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextCidade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yantramanav"
                android:background="@drawable/bg_edit_login"
                android:inputType="text"
                android:paddingStart="22dp"
                android:layout_marginTop="10dp"
                android:hint="@string/cidade"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="250dp"
                android:id="@+id/ButtonSaveGym"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/yantramanav"
                android:textSize="19sp"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_login"
                android:layout_height="wrap_content"
                android:text="Salvar"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>