<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="22dp">

        <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMessageEnterTimeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yantramanav"
        android:textColor="@color/colorBlackOpaco"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="Deseja entrar nesse horário?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewMessageSubDeleteDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/yantramanav"
            android:text="@string/tem_certeza"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMessageEnterTimeDialog" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCancelEnterTimeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/yantramanav"
            android:text="@string/cancelar"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonEnterTimeDialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonEnterTimeDialog" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEnterTimeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_login"
            android:fontFamily="@font/yantramanav"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMessageSubDeleteDialog" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>